--- a/src/main/resources/assets/tutorialmod/lang/en_us.json
+++ b/src/main/resources/assets/tutorialmod/lang/en_us.json
@@ -12,5 +12,7 @@
     "block.tutorialmod.nether_sapphire_ore": "Nether Sapphire Ore",
     "block.tutorialmod.end_stone_sapphire_ore": "End Stone Sapphire Ore",
 
+    "block.tutorialmod.sound_block": "Sound Block",
+
     "creativetab.tutorial_tab": "Sapphire Tutorial Tab"
 }
